2001-08-23  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-map): Assign new Key bindings to avoid
	clashes with moving actions:
	'po-previous-fuzzy-entry' = 'F',
	'po-previous-obsolete-entry' = 'O',
	'po-previous-translated-entry' = 'T',
	'po-previous-untranslated' = 'U',
	'po-undo' = '_',
	'po-other-window' = '0',
	'po-select-auxiliary' = '\C-c\C-a'.
	(po-help-display-string): Likewise.

2001-08-23  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-next-translated-entry): Actually search for
	'translated', not 'untranslated'.

2001-11-01  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-msgfmt-version-check): Also accept pre-release
	versions.

2001-10-31  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Renamed COPYING.LIB-2 to COPYING.LIB-2.0.

2001-10-30  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el (po-team-name-to-code): Extend the list using items from
	src/msginit.c.

2001-10-26  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Use a different wording about aclocal.m4 if the
	package uses automake.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Copy only ABOUT-NLS, intl/, po/.

2001-09-25  Bruno Haible  <haible@clisp.cons.org>

	Upgrade to automake-1.5.
	* automake.diff: Remove file.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Don't copy installed jar files.

2001-08-23  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-compute-counters): First save `current'
	po-start-of-msgstr; use it to set `position' while looping over all
	entries.

2001-08-20  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode): Add newlines to fix layout problem calling
	'C-h m'.

2001-08-18  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-ensure-source-references): Use 'string-to-number'
	instead of 'string-to-int'.
	(po-msgfmt-version-check): Likewise.

2001-08-11  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-edit-string): Set indent-line-function to